src/test/resources/purescript_examples/passing/InferRecFunWithConstrainedArgument.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ModuleName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('Prelude')
            PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(NumberBinder)
            PsiElement(natural)('100')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(NumericLiteral)
              PsiElement(natural)('100')
              PsiElement(whitespace)('\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('n')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('test')
            PureASTWrapperElement(Parens)
              PsiElement(()('(')
              PureASTWrapperElement(Value)
                PureASTWrapperElement(PrefixValue)
                  PureASTWrapperElement(NumericLiteral)
                    PsiElement(natural)('1')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(IdentInfix)
                  PureASTWrapperElement(Qualified)
                    PsiElement(operator)('+')
                    PsiElement(whitespace)(' ')
                PureASTWrapperElement(Value)
                  PureASTWrapperElement(PrefixValue)
                    PureASTWrapperElement(Var)
                      PureASTWrapperElement(Qualified)
                        PsiElement(identifier)('n')
              PsiElement())(')')
              PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('print')
                PsiElement(whitespace)(' ')
          PureASTWrapperElement(IdentInfix)
            PureASTWrapperElement(Qualified)
              PsiElement(operator)('$')
              PsiElement(whitespace)(' ')
          PureASTWrapperElement(Value)
            PureASTWrapperElement(PrefixValue)
              PureASTWrapperElement(Var)
                PureASTWrapperElement(Qualified)
                  PsiElement(identifier)('test')
                  PsiElement(whitespace)(' ')
              PureASTWrapperElement(NumericLiteral)
                PsiElement(natural)('0')
                PsiElement(whitespace)('\n')
