src/test/resources/purescript_examples/failing/Arrays.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Qualified)
          PureASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PsiElement(\)('\')
            PureASTWrapperElement(Abs)
              PsiElement(identifier)('arr')
              PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Value)
              PureASTWrapperElement(PrefixValue)
                PureASTWrapperElement(Var)
                  PureASTWrapperElement(Qualified)
                    PsiElement(identifier)('arr')
                    PsiElement(whitespace)(' ')
              PureASTWrapperElement(IdentInfix)
                PureASTWrapperElement(Qualified)
                  PsiElement(operator)('!!')
                  PsiElement(whitespace)(' ')
              PureASTWrapperElement(Value)
                PureASTWrapperElement(PrefixValue)
                  PureASTWrapperElement(Parens)
                    PsiElement(()('(')
                    PureASTWrapperElement(Value)
                      PureASTWrapperElement(PrefixValue)
                        PureASTWrapperElement(NumericLiteral)
                          PsiElement(natural)('0')
                          PsiElement(whitespace)(' ')
                      PureASTWrapperElement(IdentInfix)
                        PureASTWrapperElement(Qualified)
                          PsiElement(operator)('!!')
                          PsiElement(whitespace)(' ')
                      PureASTWrapperElement(Value)
                        PureASTWrapperElement(PrefixValue)
                          PureASTWrapperElement(NumericLiteral)
                            PsiElement(natural)('0')
                    PsiElement())(')')
                    PsiElement(whitespace)('\n')
